--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,8 +1,7 @@
 .rootContainer {
   display: flex;
   flex-direction: column;
-  padding: 40px 100px;
+  padding: 40px 100px 140px 100px;
   height: 100%;
-  background-color: #333533;
   overflow-y: auto;
 }
