--- a/src/components/Pagination.module.scss
+++ b/src/components/Pagination.module.scss
@@ -1,8 +1,8 @@
-@import "../../variables";
+@import "../variables";
 
 .wrapper {
   width: 100%;
-  background-color: $secondary-color;
+  background-color: $dark-blue;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -40,7 +40,7 @@ h1 {
 
 .pagerIcon {
   content: "";
-  background: url("../../assets/icon-pager.svg") center center no-repeat;
+  background: url("../assets/icon-pager.svg") center center no-repeat;
   width: 8px;
   height: 12px;
   display: inline-block;
