--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,7 +1,11 @@
 .rootContainer {
   display: flex;
   flex-direction: column;
-  padding: 40px 100px 140px 100px;
+  padding: 40px 10% 140px 10%;
   height: 100%;
   overflow-y: auto;
+
+  @media only screen and (max-width: 768px) {
+    padding: 40px 0 140px 0;
+  }
 }
