--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -1,13 +1,21 @@
+@import '../variables';
+
 .headerContainer {
   display: flex;
   align-items: center;
   margin-bottom: 30px;
+  position: relative;
+  flex-wrap: wrap;
 
   span {
     font-size: 32px;
     color: #ffffff;
     margin-left: 30px;
     border-radius: 3px;
+  }
+
+  @media only screen and (max-width: 768px) {
+    padding: 0 40px;
   }
 }
 
@@ -23,6 +31,16 @@
   user-select: none;
   color: #ffffff;
   margin-left: auto;
+
+  &.checkboxContainerFixed {
+    position: fixed;
+    left: 83%;
+    top: 59px;
+    transform: translateX(-50%);
+    z-index: 100;
+    border-radius: 8px;
+    background-color: $main-background-color;
+  }
 
   &:hover input ~ .checkmark {
     background-color: #ccc;
