--- a/src/components/Table/Misc/SelectedMovieModal.module.scss
+++ b/src/components/Table/Misc/SelectedMovieModal.module.scss
@@ -14,12 +14,14 @@
 .modalContent {
   background-color: #fefefe;
   margin: 15% auto;
-  padding: 20px;
   border: 1px solid #888;
   width: 30%;
   position: relative;
   border-radius: 12px;
 
+  @media only screen and (max-width: 800px) {
+    width: 70%;
+  }
 
   .movieInfoContainer {
     display: flex;
