Error handling added

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,3 +2,4 @@ $main-background-color: #333533;
 $secondary-color: #242423;
 $dark-blue: #303960;
 $main-hover-color: #dc8300;
+$error-collor: #ff4a4a;
