--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -40,6 +40,7 @@
     z-index: 100;
     border-radius: 8px;
     background-color: $main-background-color;
+    white-space: nowrap;
   }
 
   &:hover input ~ .checkmark {
