--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -4,8 +4,13 @@
   display: flex;
   align-items: center;
   margin-bottom: 30px;
-  position: relative;
+  position: fixed;
   flex-wrap: wrap;
+  top: 0;
+  padding: 30px 0;
+  z-index: 10;
+  width: 80%;
+  background-color: $main-background-color;
 
   span {
     font-size: 32px;
@@ -15,7 +20,13 @@
   }
 
   @media only screen and (max-width: 768px) {
-    padding: 0 40px;
+    width: 100%;
+  }
+
+  img {
+    @media only screen and (max-width: 768px) {
+      margin-left: 20px;
+    }
   }
 }
 
@@ -31,17 +42,6 @@
   user-select: none;
   color: #ffffff;
   margin-left: auto;
-
-  &.checkboxContainerFixed {
-    position: fixed;
-    left: 83%;
-    top: 59px;
-    transform: translateX(-50%);
-    z-index: 100;
-    border-radius: 8px;
-    background-color: $main-background-color;
-    white-space: nowrap;
-  }
 
   &:hover input ~ .checkmark {
     background-color: #ccc;
@@ -88,5 +88,14 @@
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+  }
+
+  @media only screen and (max-width: 768px) {
+    margin-right: 20px;
+  }
+
+  @media only screen and (max-width: 443px) {
+    margin-left: 20px;
+    margin-top: 20px;
   }
 }
