--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,4 +8,8 @@
   @media only screen and (max-width: 768px) {
     padding: 125px 0 140px 0;
   }
+
+  @media only screen and (max-width: 443px) {
+    padding-top: 180px;
+  }
 }
